--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <li>Instructor: David Rogers (@al-the-x)</li>
 <li>Phone: 407-582-2340 (Arts &amp; Ent Dept)</li>
 <li>Email: drogers28@mail.valenciacollege.edu</li>
-<li>URL: https://vcc-dig1108-fall2012.github.com</li>
+<li>URL: <a href="https://vcc-dig1108.github.com">https://vcc-dig1108.github.com</a></li>
 </ul>
 <h3>Text and Required Supplies</h3>
 <ul>
