Changing the text for the course.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 </ul>
 <h3>Text and Required Supplies</h3>
 <ul>
-<li><a href="http://shop.oreilly.com/product/9780596006303.do?CMP=ILC-hf1st">Head First PHP &amp; MySQL</a> (<a href="http://www.headfirstlabs.com/books/hfphp/">site</a>)</li>
-<li>Print ISBN13: 978-0-596-00630-3 / ISBN10: 0-596-00630-6</li>
-<li>Ebook ISBN13: 978-0-596-55644-0 / ISBN10: 0-596-55644-6</li>
+<li><a href="http://shop.oreilly.com/product/9780596804381.do">PHP: The Good Parts</a><ul>
+<li>Print ISBN13: 978-0-596-80437-4 / ISBN10: 0-596-80437-7</li>
+<li>Ebook ISBN13: 978-1-4493-8828-7 / ISBN10: 1-4493-8828-0</li>
+</ul>
+</li>
 <li><a href="https://github.com/signup">Free Github Account</a></li>
 <li><a href="https://c9.io/signup">Free Cloud9 IDE Account</a></li>
 </ul>
