--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@ develop your mastery of those competencies.</p>
 Room 216.</p>
 <h2>Course Schedule</h2>
 <ul>
-<li><strong>Week 1:</strong> <a href="http://goo.gl/gJkFv">Intro to the Intro</a></li>
-<li><strong>Weeks 2-6:</strong> Primitives, Literals, Variables, Operators, Control Structures, Functions</li>
+<li><strong>Week 1:</strong> <a href="http://j.mp/13JPRtg">Intro to the Intro</a></li>
+<li><strong>Week 2:</strong> <a href="http://j.mp/YcyH7b">Finding your way around -- intro to literals, operators, variables and expressions feat. the PHP Manual</a></li>
+<li><strong>Weeks 3-6:</strong> Primitives, Literals, Variables, Operators, Control Structures, Functions</li>
 <li><strong>Weeks 7-8:</strong> Basic Object-Oriented Programming</li>
 <li><strong>Weeks 9:</strong> Welcome to the Coding Dojo!</li>
 <li><strong>Weeks 10-15:</strong> Advanced Techniques, Coding Dojos</li>
