--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@ Room 216.</p>
 <li><strong>Week 1:</strong> <a href="http://j.mp/13JPRtg">Intro to the Intro</a></li>
 <li><strong>Week 2:</strong> <a href="http://j.mp/YcyH7b">Finding your way around...</a> -- Intro to Literals, Operators, Variables and Expressions feat. the PHP Manual</li>
 <li><strong>Week 3:</strong> <a href="http://j.mp/10Qd0KY">Expressing yourself... Politely.</a> -- More about Expressions, Statements, and Code Organization</li>
-<li><strong>Weeks 4-6:</strong> Primitives, Literals, Variables, Operators, Control Structures, Functions</li>
+<li><strong>Week 4:</strong> BREAK</li>
+<li><strong>Week 5:</strong> <a href="http://j.mp/VkEVkQ">Who's in control here?</a> -- Introduction to control structures and diagraming with <code>if-else</code></li>
+<li><strong>Week 6:</strong> <a href="http://j.mp/12QxKTB">Walk around in circles</a> -- More on control structures with loops and arrays</li>
 <li><strong>Weeks 7-8:</strong> Basic Object-Oriented Programming</li>
 <li><strong>Weeks 9:</strong> Welcome to the Coding Dojo!</li>
 <li><strong>Weeks 10-15:</strong> Advanced Techniques, Coding Dojos</li>
